<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.bc.gov.tno.jorel2</groupId>
  <artifactId>jorel2</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Jorel2</name>
  <description>Java 13 rewrite of Jorel</description>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
	  <plugins>
	   <plugin>
	      <artifactId>maven-assembly-plugin</artifactId>
	      <executions>
	        <execution>
	          <phase>package</phase>
	          <goals>
	            <goal>single</goal>
	          </goals>
	        </execution>
	      </executions>
	      <configuration>
	        <descriptorRefs>
	          <descriptorRef>jar-with-dependencies</descriptorRef>
	        </descriptorRefs>
	        <archive>
		      <manifest>
		        <mainClass>ca.bc.gov.tno.jorel2.Jorel2Main</mainClass>
		      </manifest>
	        </archive>
	      </configuration>
	    </plugin>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-surefire-plugin</artifactId>
	      <version>3.0.0-M4</version>
 	    </plugin>
 	    <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>13</release>
            <target>13</target>
            <compilerArgument>
            	--enable-preview
            </compilerArgument>
          </configuration>
        </plugin>
	  </plugins>
	  <resources>
	  	<resource>
            <directory>src/main/resources</directory>
            <includes>
                <include>**/*.properties</include>
                <include>**/*.xml</include>
            </includes>
        </resource>
      </resources>
  </build>
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
    <repository>
      <id>my-local-repo</id>
      <url>file://${basedir}/lib</url>
    </repository>
    <repository>
      <id>boundlessgeo</id>
      <url>https://repo.boundlessgeo.com/main/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
	  <groupId>org.springframework</groupId>
	  <artifactId>spring-context</artifactId>
	  <version>5.2.2.RELEASE</version>
    </dependency>
	<dependency>
      <groupId>javax.annotation</groupId>
	  <artifactId>javax.annotation-api</artifactId>
	  <version>1.3.2</version>
	</dependency>
	<dependency>
	  <groupId>org.apache.logging.log4j</groupId>
	  <artifactId>log4j-core</artifactId>
	  <version>2.12.1</version>
	</dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.4.2</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.4.2</version>
        <scope>test</scope>
    </dependency>
	<dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.21.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>2.23.0</version>
      <scope>test</scope>
    </dependency>
	<dependency>
	   <groupId>org.hibernate</groupId>
	   <artifactId>hibernate-core</artifactId>
	   <version>5.4.10.Final</version>
	</dependency>
	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-c3p0</artifactId>
	    <version>5.3.6.Final</version>
	</dependency>
	<dependency>
	  <groupId>com.oracle</groupId>
	  <artifactId>ojdbc8</artifactId>
	  <version>12.2.0.1</version>
	</dependency>
	<dependency>
	    <groupId>javax.inject</groupId>
	    <artifactId>javax.inject</artifactId>
	    <version>1</version>
	</dependency>
    <dependency>
        <groupId>com.sun.xml.bind</groupId>
        <artifactId>jaxb-xjc</artifactId>
        <version>2.3.0</version>
    </dependency>
    <dependency>
	  <groupId>com.vdurmont</groupId>
	  <artifactId>emoji-java</artifactId>
	  <version>5.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.syndication/rome -->
	<dependency>
	    <groupId>com.sun.syndication</groupId>
	    <artifactId>rome</artifactId>
	    <version>0.9</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
	<dependency>
	    <groupId>org.jdom</groupId>
	    <artifactId>jdom</artifactId>
	    <version>1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
	<dependency>
	    <groupId>com.sun.mail</groupId>
	    <artifactId>javax.mail</artifactId>
	    <version>1.5.1</version>
	</dependency>
  </dependencies>
</project>